# WriteTest

./: CMakeLists.txt  fopen.cpp  helper.cpp  helper.hpp  ofstream.cpp  open.cpp  openflags.cpp
